--- a/portfolio.html
+++ b/portfolio.html
@@ -57,35 +57,37 @@
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Наши работы</h1>
-          <ul class="list btn-list">
-            <li class="btn-item">
-              <button type="button" class="portfolio-button is-active">
+          <ul class="list button-list button-list--position">
+            <li class="button-list__thumb">
+              <button type="button" class="button-list__item is-active">
                 Все
               </button>
             </li>
-            <li class="btn-item">
-              <button type="button" class="portfolio-button">Веб-сайты</button>
+            <li class="button-list__thumb">
+              <button type="button" class="button-list__item">Веб-сайты</button>
             </li>
-            <li class="btn-item">
-              <button type="button" class="portfolio-button">Приложения</button>
+            <li class="button-list__thumb">
+              <button type="button" class="button-list__item">
+                Приложения
+              </button>
             </li>
-            <li class="btn-item">
-              <button type="button" class="portfolio-button">Дизайн</button>
+            <li class="button-list__thumb">
+              <button type="button" class="button-list__item">Дизайн</button>
             </li>
-            <li class="btn-item">
-              <button type="button" class="portfolio-button">Маркетинг</button>
+            <li class="button-list__thumb">
+              <button type="button" class="button-list__item">Маркетинг</button>
             </li>
           </ul>
-          <ul class="list portfolio-list">
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link">
-                <div class="portfolio-thumb">
+          <ul class="list portfolio">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img1.jpg"
                     alt="Ноутбук с сайтом"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -94,43 +96,43 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Технокряк</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Технокряк</h2>
+                  <p class="portfolio__text">Веб-сайт</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img2.jpg"
                     alt="Игра в баскетбол"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>Наши менторы самые лучшие!</p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="portfolio-text">Дизайн</p>
+                  <p class="portfolio__text">Дизайн</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img3.jpg"
                     alt="Логотип ресторана"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Спасибо вам огромное, за вашу работу, за огромное
                       количество проверенных работ. За вашу конструктивную
@@ -138,22 +140,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Ресторан Seafood</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Ресторан Seafood</h2>
+                  <p class="portfolio__text">Приложение</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img4.jpg"
                     alt="Наушники"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -162,22 +164,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Проект Prime</h2>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Проект Prime</h2>
+                  <p class="portfolio__text">Маркетинг</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img5.jpg"
                     alt="Коробки"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -186,22 +188,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Проект Boxes</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Проект Boxes</h2>
+                  <p class="portfolio__text">Приложение</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img6.jpg"
                     alt="Монитор с сайтом"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -210,22 +212,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Inspiration has no Borders</h2>
+                  <p class="portfolio__text">Веб-сайт</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img7.jpg"
                     alt="Книга"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -234,22 +236,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Издание Limited Edition</h2>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Издание Limited Edition</h2>
+                  <p class="portfolio__text">Дизайн</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img8.jpg"
                     alt="Этикетка"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -258,22 +260,22 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Проект LAB</h2>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Проект LAB</h2>
+                  <p class="portfolio__text">Маркетинг</p>
                 </div></a
               >
             </li>
 
-            <li class="portfolio-element">
-              <a href="" class="portfolio-link"
-                ><div class="portfolio-thumb">
+            <li class="portfolio__element">
+              <a href="" class="portfolio__link"
+                ><div class="portfolio__thumb">
                   <img
                     src="./images/portfolio/img9.jpg"
                     alt="Ноутбук"
                     width="370"
                   />
-                  <div class="portfolio-overlay">
+                  <div class="portfolio__overlay">
                     <p>
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -282,9 +284,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="text-container">
-                  <h2 class="portfolio-title">Growing Business</h2>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__text-container">
+                  <h2 class="portfolio__title">Growing Business</h2>
+                  <p class="portfolio__text">Приложение</p>
                 </div></a
               >
             </li>
@@ -292,22 +294,22 @@
         </div>
       </section>
     </main>
-    <footer class="footer-bcg">
-      <div class="container footer-container">
+    <footer class="footer__bcg">
+      <div class="container footer__container">
         <div>
           <a href="./index.html" class="footer-logo"
             ><span class="logo__item">Web</span>Studio</a
           >
           <address class="address">
-            <p class="footer-text">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="footer__text">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list">
               <li class="footer-list__item">
-                <a href="mailto:info@devstudio.com" class="footer-contacts"
+                <a href="mailto:info@devstudio.com" class="footer__contacts"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a href="tel:+380961111111" class="footer-contacts"
+                <a href="tel:+380961111111" class="footer__contacts"
                   >+38 096 111 11 11</a
                 >
               </li>
@@ -315,17 +317,17 @@
           </address>
         </div>
         <div class="footer-socials">
-          <p class="footer-socials-text">ПРИСОЕДИНЯЙТЕСЬ</p>
-          <ul class="footer-socials-icons">
-            <li class="footer-socials-icons-item">
+          <p class="footer__socials-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+          <ul class="footer__socials-icons">
+            <li class="footer__socials-icons--item">
               <a
-                class="footer-socials-icons-link"
+                class="footer__socials-icons--link"
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
               >
                 <svg
-                  class="footer-socials-icons-svg"
+                  class="footer__socials-icons--svg"
                   width="20px"
                   height="20px"
                 >
@@ -333,15 +335,15 @@
                 </svg>
               </a>
             </li>
-            <li class="soc-icons-item">
+            <li class="soc-icons__item">
               <a
-                class="footer-socials-icons-link"
+                class="footer__socials-icons--link"
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
               >
                 <svg
-                  class="footer-socials-icons-svg"
+                  class="footer__socials-icons--svg"
                   width="20px"
                   height="20px"
                 >
@@ -349,15 +351,15 @@
                 </svg>
               </a>
             </li>
-            <li class="footer-socials-icons-item">
+            <li class="footer__socials-icons--item">
               <a
-                class="footer-socials-icons-link"
+                class="footer__socials-icons--link"
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
               >
                 <svg
-                  class="footer-socials-icons-svg"
+                  class="footer__socials-icons--svg"
                   width="20px"
                   height="20px"
                 >
@@ -365,15 +367,15 @@
                 </svg>
               </a>
             </li>
-            <li class="footer-socials-icons-item">
+            <li class="footer__socials-icons--item">
               <a
-                class="footer-socials-icons-link"
+                class="footer__socials-icons--link"
                 href=""
                 target="_blank"
                 rel="noonpener noreferer"
               >
                 <svg
-                  class="footer-socials-icons-svg"
+                  class="footer__socials-icons--svg"
                   width="20px"
                   height="20px"
                 >
@@ -383,18 +385,18 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form-place">
-          <p class="footer-socials-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
-          <form action="" class="footer-form">
+        <div class="footer__form">
+          <p class="footer__socials-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
+          <form action="" class="footer__form--place">
             <input
               type="email"
               name="user-email"
-              class="footer-form-field"
+              class="footer__form--field"
               placeholder="E-mail"
             />
             <button type="submit" class="subscribe-button">
               Подписаться
-              <svg class="subscribe-button-icon" width="24px" height="24px">
+              <svg class="subscribe-button__icon" width="24px" height="24px">
                 <use href="./images/sprite.svg#icon-send"></use>
               </svg>
             </button>
