--- a/portfolio.html
+++ b/portfolio.html
@@ -387,7 +387,7 @@
         </div>
         <div class="footer__form">
           <p class="footer__socials-text">ПОДПИШИТЕСЬ НА РАССЫЛКУ</p>
-          <form action="" class="footer__form--place">
+          <form class="footer__form--place">
             <input
               type="email"
               name="user-email"
