--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
           ><span class="logo__item">Web</span>Studio</a
         >
         <nav class="navigation">
-          <ul class="menu list">
-            <li class="menu__item">
+          <ul class="navigation-menu list">
+            <li class="navigation-menu__item">
               <a href="./index.html" class="link is-active">Студия</a>
             </li>
-            <li class="menu__item">
+            <li class="navigation-menu__item">
               <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
-            <li class="menu__item"><a href="" class="link">Контакты</a></li>
+            <li class="navigation-menu__item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="menu list">
           <li class="menu__item">
             <a href="mailto:info@devstudio.com" class="contact-list">
-              <svg class="adress-icon" width="16px" height="12px">
+              <svg class="address-icon" width="14px" height="12px">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -44,15 +44,88 @@
           </li>
           <li class="menu__item">
             <a href="tel:+380961111111" class="contact-list"
-              ><svg class="adress-icon" width="10px" height="16px">
+              ><svg class="address-icon" width="10px" height="14px">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
           </li>
         </ul>
+        <button class="mobile-menu__button" data-menu-button>
+          <svg  width="24px" height="16px">
+            <use class="mobile-menu__icon" href="./images/sprite.svg#icon-menu"></use>
+            <use class="mobile-menu__icon-close" href="./images/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+          
+        </div>
       </div>
     </header>
+    <div class="mobile-menu" data-menu>
+            <ul class="mobile-menu__list">
+              <li class="mobile-menu__item">
+                <a href="./index.html" class="mobile-menu__link">Студия</a>
+              </li>
+              <li class="mobile-menu__item">
+                <a href="./portfolio.html" class="mobile-menu__link"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="mobile-menu__item">
+                <a href="" class="mobile-menu__link">Контакты</a>
+              </li>
+            </ul>
+            <ul class="mobile-menu__contacts">
+              <li>
+                <a href="tel:+380961111111" class="mobile-menu__tel"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="mobile-menu__mail"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+            <ul class="mobile-menu__socials">
+              <li class="mobile-menu__socials-items">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noonpener noreferer"
+                  class="mobile-menu__socials-link"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mobile-menu__socials-items">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noonpener noreferer"
+                  class="mobile-menu__socials-link"
+                  >Twitter</a
+                >
+              </li>
+              <li class="mobile-menu__socials-items">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noonpener noreferer"
+                  class="mobile-menu__socials-link"
+                  >Facebook</a
+                >
+              </li>
+              <li class="">
+                <a
+                  href=""
+                  target="_blank"
+                  rel="noonpener noreferer"
+                  class="mobile-menu__socials-link"
+                  >Linkedin</a
+                >
+              </li>
+            </ul>
+          </div>
     <main>
       <section class="section hero hero__overlay">
         <div class="container">
@@ -402,7 +475,7 @@
         <div class="container">
           <h2 class="title">Постоянные клиенты</h2>
           <ul class="list client__list">
-            <li>
+            <li class="client__item">
               <a
                 class="client__link"
                 href=""
@@ -414,7 +487,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client__item">
               <a
                 class="client__link"
                 href=""
@@ -425,7 +498,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client__item">
               <a
                 class="client__link"
                 href=""
@@ -436,7 +509,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client__item">
               <a
                 class="client__link"
                 href=""
@@ -447,7 +520,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client__item">
               <a
                 class="client__link"
                 href=""
@@ -458,7 +531,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="client__item">
               <a
                 class="client__link"
                 href=""
@@ -475,7 +548,7 @@
     </main>
     <footer class="footer footer__bcg">
       <div class="container footer__container">
-        <div>
+        <div class="footer__address">
           <a href="./index.html" class="logo footer__logo"
             ><span class="logo__item">Web</span>Studio</a
           >
@@ -487,7 +560,7 @@
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="footer-list__item">
                 <a href="tel:+380961111111" class="footer__contacts"
                   >+38 096 111 11 11</a
                 >
@@ -664,5 +737,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
