--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <a href="./index.html" class="logo header__logo"
           ><span class="logo__item">Web</span>Studio</a
@@ -36,7 +36,7 @@
         <ul class="menu list">
           <li class="menu__item">
             <a href="mailto:info@devstudio.com" class="contact-list">
-              <svg class="adress-icon" width="16px" height="12px">
+              <svg class="address-icon" width="16px" height="12px">
                 <use href="./images/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -44,7 +44,7 @@
           </li>
           <li class="menu__item">
             <a href="tel:+380961111111" class="contact-list"
-              ><svg class="adress-icon" width="10px" height="16px">
+              ><svg class="address-icon" width="10px" height="16px">
                 <use href="./images/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -52,7 +52,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <section class="section">
         <div class="container">
@@ -294,7 +294,7 @@
         </div>
       </section>
     </main>
-    <footer class="footer footer__bcg">
+    <!-- <footer class="footer footer__bcg">
       <div class="container footer__container">
         <div>
           <a href="./index.html" class="logo footer__logo"
@@ -406,6 +406,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
